--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>selenium-java</artifactId>
             <version>2.53.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.6</version>
+        </dependency>
+
     </dependencies>
 
 
