--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
             <artifactId>commons-csv</artifactId>
             <version>1.6</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
 
 
